--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "web-audio-write",
   "version": "1.0.0",
-  "description": "Send data to web-audio node",
+  "description": "Send data to web-audio",
   "main": "./index.js",
   "scripts": {
     "lint": "eslint *.js --ignore-pattern test*",
