--- a/package.json
+++ b/package.json
@@ -25,15 +25,17 @@
   },
   "homepage": "https://github.com/audiojs/web-audio-write#readme",
   "devDependencies": {
-    "audio-context": "^1.0.1",
     "audio-generator": "^2.1.2",
     "tape": "^4.6.3"
   },
   "dependencies": {
-    "audio-buffer": "^4.0.1",
-    "audio-buffer-list": "^4.0.0",
+    "audio-buffer": "^4.0.2",
+    "audio-buffer-list": "^4.1.0",
     "audio-buffer-utils": "^5.0.1",
+    "audio-context": "^1.0.1",
     "is-audio-buffer": "^1.0.11",
-    "object-assign": "^4.1.1"
+    "is-plain-obj": "^1.1.0",
+    "object-assign": "^4.1.1",
+    "pick-by-alias": "^1.2.0"
   }
 }
