Streamline end, consume AudioBuffers

--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
   },
   "homepage": "https://github.com/audiojs/web-audio-write#readme",
   "devDependencies": {
+    "audio-buffer": "^4.0.4",
+    "audio-buffer-utils": "^5.1.2",
     "parcel": "^1.12.4",
     "tst": "^5.0.11"
   },
