Make wait-please a dev dep

--- a/package.json
+++ b/package.json
@@ -30,11 +30,11 @@
     "audio-buffer": "^4.0.4",
     "audio-buffer-utils": "^5.1.2",
     "parcel": "^1.12.4",
-    "tst": "^5.0.11"
+    "tst": "^5.0.11",
+    "wait-please": "^3.0.0"
   },
   "dependencies": {
     "audio-context": "^1.0.3",
-    "audioworklet-polyfill": "^1.1.2",
-    "wait-please": "^2.0.1"
+    "audioworklet-polyfill": "^1.1.2"
   }
 }
